--- a/app/src/main/res/layout/activity_cliente_main.xml
+++ b/app/src/main/res/layout/activity_cliente_main.xml
@@ -41,15 +41,16 @@
                 android:contentDescription="@string/app_name"
                 app:srcCompat="@drawable/foodisea" />
 
-            <!-- Icono de historial de pedidos -->
+
+            <!-- Icono de notificaciones -->
             <Button
-                android:id="@+id/btnOrders"
+                android:id="@+id/btnNotifications"
                 style="?attr/materialIconButtonFilledStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/btnOrders"
-                app:icon="@drawable/rounded_orders_24"
-                android:backgroundTint="@color/btn_medium"/>
+                android:backgroundTint="@color/btn_medium"
+                android:contentDescription="Notificaciones"
+                app:icon="@drawable/ic_notifications" />
         </LinearLayout>
 
         <!-- Parte scrolleable -->
@@ -74,17 +75,26 @@
                     android:textColor="@color/black"
                     android:fontFamily="@font/sen_font"/>
 
-                <!-- Barra de búsqueda -->
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/svRestaurants"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="8dp"
-                    android:layout_marginHorizontal="16dp"
-                    app:queryHint="Buscar restaurantes, platos..."
-                    app:iconifiedByDefault="false"
-                    android:background="@drawable/search_view_bg"/>
 
+
+                <!-- Pedidos -->
+<!--                app:backgroundTint="#A0FFE57F"-->
+                <Button
+                    android:id="@+id/btnPedidos"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:background="@drawable/search_view_bg"
+                    android:paddingHorizontal="50dp"
+                    app:backgroundTint="@color/btn_light"
+                    android:text="Dale seguimiento a tu orden"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/sen_font"
+                    app:icon="@drawable/ic_delivery_dining"
+                    app:iconTint="#000000"
+                    app:iconSize="26dp" />
 
                 <!-- Restaurantes -->
                 <TextView
@@ -94,9 +104,19 @@
                     android:padding="16dp"
                     android:text="@string/restaurantes"
                     android:textSize="20sp"
-                    android:layout_marginVertical="10dp"
                     android:textColor="@color/black"
                     android:fontFamily="@font/sen_font"/>
+
+                <!-- Barra de búsqueda -->
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/svRestaurants"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginHorizontal="16dp"
+                    app:queryHint="Buscar restaurantes o comida"
+                    app:iconifiedByDefault="false"
+                    android:background="@drawable/search_view_bg"/>
 
                 <!-- Lista de restaurantes -->
                 <androidx.recyclerview.widget.RecyclerView
