--- a/app/src/main/res/layout/activity_start_app.xml
+++ b/app/src/main/res/layout/activity_start_app.xml
@@ -33,6 +33,7 @@
         android:background="@drawable/rounded_corners"
         android:clipToOutline="true">
 
+
         <!-- Primera Imagen -->
         <ImageView
             android:layout_width="match_parent"
@@ -82,7 +83,7 @@
         android:text="Iniciar sesión"
         android:textAllCaps="true"
         android:textSize="18sp"
-        android:backgroundTint="@android:color/holo_red_light"
+        android:backgroundTint="@color/btn_medium"
         android:textColor="@android:color/white"
         android:layout_marginTop="14dp"
         android:layout_marginBottom="10dp"
@@ -93,7 +94,7 @@
         android:id="@+id/btnRegistrate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registrate"
+        android:text="Regístrate"
         android:textAllCaps="true"
         android:textSize="18sp"
         app:strokeColor="@android:color/holo_red_light"
